# terratruce

./: .gitignore  DEPLOYMENT_SUMMARY.md  EMAIL_TESTING.md  MCP_README.md  README.md  docker-compose.yml  mcp_server_template.py  package-lock.json  restore_cache_entries.sql  supabase_setup.sql  test_api_keys.py  test_email.py
ai-mcp/: Cargo.toml
ai-mcp/src/: cache.rs  decision_engine.rs  email.rs  main.rs  models.rs
ai-mcp/src/providers/: gemini.rs  perplexity.rs
ai-services/ensembler/: index.js
ai-services/xbooster/: main.py
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 0001_create_tables.sql  0002_add_mcp_protection.sql  README.md
backend/src/: email.rs  main.rs
client/: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css  main.jsx
email-test/: Cargo.toml  test_email.rs
frontend/: vite.config.js
frontend/src/: App.jsx  main.jsx
mcp/: .env  .env.example  Cargo.toml  Dockerfile
mcp-backend/: .env.example  README.md  analysis_output.txt  analysis_result.json  check_usage.ts  package-lock.json  package.json  test-email.js  test_places.js  vm_test_analysis.js  vm_test_gemini.js
mcp-backend/database/: api_usage_setup.sql  cache_cleanup.sql  setup_database.sql  visits_setup.sql
mcp-backend/src/: api-server.ts  index.ts  test-calendar-email.ts  test-email.ts  test-google-calendar.ts  test-live-email.ts  test-pdf-email.ts  verify.ts
mcp/src/: cache.rs  decision_engine.rs  main.rs
services/embedder/: main.py  requirements.txt
(+81 files in other folders)
